--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><span>Ui/Ux Designer</span></li>
                 <li><span>Frontend Developer</span></li>
                 <li><span>React Js Developer</span></li>
-                <li><span>React Js Developer</span></li>
+                <li><span>Javascript Developer</span></li>
             </ul>
         </div>
     </div>
